# dd-trace-py

./: .gitignore  build_wheels.sh  crash.py  docker-compose.yml  pyproject.toml  riotfile.py  setup.py
.riot/requirements/: 1af38b3.txt  46a46eb.txt
ddtrace/: tracer.py
ddtrace/contrib/asgi/: middleware.py
ddtrace/contrib/ci_visibility/: manual_testing_api.py  manual_testing_api_2.py
ddtrace/contrib/grpc/: utils.py
ddtrace/contrib/pymongo/: client.py  patch.py
ddtrace/contrib/requests/: connection.py
ddtrace/contrib/unittest/: patch.py
ddtrace/internal/accupath/: README.md  __init__.py  checkpoints.py  context_propagation.py  generators.py  node_info.py  path_info.py  payload.py  payload_pb2.py  payload_pb2.pyi  processor.py  schemas.py  stats.py
ddtrace/internal/ci_visibility/: constants.py  recorder.py
ddtrace/internal/core/: __init__.py
ddtrace/internal/datadog/profiling/: CMakeLists.txt  _ddup.pyi  _ddup.pyx  ddup.py
ddtrace/internal/datadog/profiling/dd_wrapper/: CMakeLists.txt
ddtrace/internal/datadog/profiling/dd_wrapper/cmake/: FindLibdatadog.cmake
ddtrace/internal/datadog/profiling/ddup/: CMakeLists.txt
ddtrace/internal/datadog/profiling/ddup/cmake/tools/: libdatadog_checksums.txt
ddtrace/internal/datadog/profiling/ddup/include/: interface.hpp
ddtrace/internal/datadog/profiling/ddup/src/: interface.cpp
ddtrace/internal/datadog/profiling/include/: exporter.hpp  interface.hpp
ddtrace/internal/datadog/profiling/src/: exporter.cpp  interface.cpp
ddtrace/internal/datadog/profiling/stack_v2/: CMakeLists.txt
ddtrace/internal/datadog/profiling/stack_v2/src/: stack.cpp
ddtrace/profiling/: profiler.py  recorder.py
ddtrace/profiling/collector/: _traceback.pyx  logging_tools.pyx  stack.pyx
ddtrace/profiling/collector/_stackv2/: CMakeLists.txt  _stack_v2.cpp
ddtrace/profiling/exporter/: pprof.pyx
ddtrace/propagation/: http.py
ddtrace/settings/: profiling.py
tests/: conftest.py  utils.py
tests/contrib/botocore/: test.py  test_bedrock.py
tests/contrib/django/: test_django.py  views.py
tests/contrib/pytest/: test_pytest.py
tests/datastreams/: test_processor.py
tests/profiling/: test_profiler.py
wheel_builder/: Dockerfile  run.sh
